fix spacing

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -125,7 +125,7 @@ body {
 
     > main,
     > aside {
-        @include mixin.padding-y( 1rem );
+        @include mixin.margin-y( 1rem );
     }
 
     > footer {
