--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,15 +8,17 @@ body {
     justify-content: space-between;
 
     > header {
-        flex: 0 1 12rem;
+        flex: 0 1 8rem;
     }
 
     > main {
         flex: 0 1 auto;
+        @include mixin.margin-y( unset );
     }
 
     > aside {
         flex: 0 1 auto;
+        @include mixin.margin-y( unset );
     }
 
     > footer {
@@ -27,12 +29,13 @@ body {
 // top header
 body > header {
     height: fit-content;
-    display: flex;
+    justify-content: space-around;
     border-bottom: solid thick color.$base-light;
 
     div#title {
-        margin: auto;
-        padding-left: 1rem;
+        flex-basis: 60%;
+        @include mixin.margin-y( auto );
+        padding: 0.5rem;
 
         > * {
             margin: 0;
@@ -42,12 +45,13 @@ body > header {
         }
 
         > h1 {
-            font-size: 200%;
+            font-size: 170%;
             letter-spacing: 0.1rem;
         }
     }
 
     div#photo {
+        flex-basis: auto;
         margin: 0;
 
         img {
@@ -62,10 +66,14 @@ body > main nav ul {
     list-style: none;
 
     li {
+        flex: 1 1 0;
+        width: fit-content;
+        text-align: center;
+
         a {
             > i.fas {
                 width: 6rem;
-                @include mixin.padding-y( 1.5rem );
+                @include mixin.padding-y( 1rem );
                 border-radius: 0.3rem;
                 background: color.$base-dark;
                 color: color.$base-light;
@@ -88,7 +96,10 @@ body > aside nav ul {
     list-style: none;
 
     li {
+        flex: 1 1 0;
+
         a {
+            width: 100%;
             line-height: 4.5rem;
 
             > * {
